Fixup almost invisible links in ShotGrid panel
Link color was purple which is very hard to see on dark grey background (not enough contrast).

The solution is apply the same style (color) on all links, visited or not.

--- a/cep/css/style.css
+++ b/cep/css/style.css
@@ -40,23 +40,20 @@ body {
 /* no underlining links */
 a {
     text-decoration: none;
-}
-
-a:link {
     color: #18A7E3;
 }
 
-a:link.sg_small_link {
+a.sg_small_link {
     color: #18A7E3;
     font-size: 10px;
 }
 
 /* links typically found in context header. not SG blue */
-a:link.sg_value_link {
+a.sg_value_link {
     color: #D7D7D7;
 }
 
-a:link.sg_value_link:hover {
+a.sg_value_link:hover {
     color: #FFFFFF;
 }
 
